# new_proxy

./: .gitignore  .tarpaulin.toml  Cargo.toml  Makefile  README.md  TESTING.md  e2e_scenarios.sh  e2e_test_dualstack.sh
conf/: client.conf  proxy.conf  server.conf
doc/: ARCHITECTURE.md  DESIGN_UDP_OVER_QUIC.md  PLAN_UDP_OVER_QUIC.md  TESTING.md  TEST_REPORT.md
doc/plans/: 2026-06-10-udp-batch-recvmmsg-sendmmsg.md  2026-06-15-hybrid-wireguard-design.md  2026-06-15-hybrid-wireguard-plan.md
doc/specs/: 2026-06-10-udp-batch-recvmmsg-sendmmsg.md
script/: new_proxy@.service
script/acceptance/: e2e_client_topology_gate.sh  e2e_dynamic_client_peer.sh  e2e_full_tunnel_bypass.sh  e2e_hybrid_ha_reconnect.sh  e2e_hybrid_wireguard.sh  e2e_mss_clamping.sh  e2e_multi_client.sh  e2e_scenarios.sh  e2e_test_dualstack.sh  e2e_udp_icmp_tunnel.sh  e2e_udp_over_quic.sh  e2e_userspace_wg_fallback.sh  run_acceptance.sh  stability_long_tcp.py  stability_report.py  stability_server.py  stability_stress_test.sh  test_key_material.sh  verify_pcap.py  wireguard_backend.sh
script/git-hooks/: pre-push
script/perf/: perf_compare_hybrid.sh  (+5 more)
src/: api.rs  app_config.rs  buffer_pool.rs  cli.rs  client.rs  client_proxy.rs  config.rs  control.rs  datapath.rs  main.rs  mss_clamping.rs  proxy_proto.rs  quic_pool.rs  quic_proto_engine.rs  relay.rs  routing.rs  rtc_loop.rs  runtime.rs  server_proxy.rs  socket_mark.rs  stats_cli.rs  tcp_util.rs  telemetry.rs  tproxy.rs  tun_datapath.rs  tun_device.rs  tun_io.rs  uds_server.rs  userspace_tcp.rs  userspace_wg.rs  virtual_tunnel.rs  wireguard.rs
(+17 files in other folders)
