[package]
name = "new_proxy"
version = "5.0.0"
edition = "2021"

[[bin]]
name = "new_proxy"
path = "src/main.rs"

[[bin]]
name = "new-proxy-cli"
path = "src/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

# QUIC 物理隧道协议实现与安全 TLS 1.3 依赖
quinn = "0.10"
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }

# 序列化与配置解析
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.21"
rcgen = "0.11"
libc = "0.2"

# 高级套接字选项绑定 (SO_REUSEPORT, IP_TRANSPARENT)
socket2 = { version = "0.5", features = ["all"] }

# 高性能 CIDR 基数树路由检索
ipnet = "2.9"

# 基础运行期支撑
rand = "0.8"
log = "0.4"
env_logger = "0.10"

# 密码学支持 (用于复用 WireGuard 密钥进行用户态对等认证与 HMAC 防篡改)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hmac = "0.12"
sha2 = "0.10"
parking_lot = "0.12"
arc-swap = "1.7"

boringtun = "0.7.1"
smoltcp = { version = "0.13.1", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
